add css with BEST and NEW marks

--- a/html/order/category.html
+++ b/html/order/category.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <link rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../css/item.css" />
   <body>
     <div class="container">
       <div class="header">
@@ -40,8 +41,20 @@
       <div class="product_list">
         <ul>
           <li class="item"><a href="#">크림빵</a></li>
-          <li class="item"><a href="#">피자빵</a></li>
           <li class="item"><a href="#">메론빵</a></li>
+          <li class="item">
+            <a class="item_best" href="#">
+              <span class="item_text">소금빵</span>
+              <img class="item_img" src="../img/salt-bread.jpg" alt="">
+              <span class="item_info">
+                <span class="name">짜지 않는 고소함</span>
+                <span class="txt_shape">
+                  Bread
+                </span>
+                <span class="item_new"></span>
+              </span>
+            </a>
+          </li>
           <li class="item"><a href="#">콘치즈빵</a></li>
           <li class="item"><a href="#">치즈크림 가득</a></li>
           <li class="item"><a href="#">치즈크림 가득</a></li>
