--- a/html/order/category.html
+++ b/html/order/category.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="../js/category.js" defer></script>
   </head>
   <link rel="stylesheet" href="../css/style.css" />
   <link rel="stylesheet" href="../css/category.css" />
   <link rel="stylesheet" href="../css/item.css" />
+  <link rel="stylesheet" href="../css/recommended.css" />
   <body>
     <div class="container">
       <div class="header">
@@ -33,10 +33,10 @@
           <div class="menu_category">
             <div>
               <ul>
-                <li class="menu_category_list"><a href="#">빵</a></li>
-                <li class="menu_category_list"><a href="#">케이크</a></li>
-                <li class="menu_category_list"><a href="#">디저트</a></li>
-                <li class="menu_category_list"><a href="#">샌드위치</a></li>
+                <li class="menu_category_list"><a href="">빵</a></li>
+                <li class="menu_category_list"><a href="">케이크</a></li>
+                <li class="menu_category_list"><a href="">디저트</a></li>
+                <li class="menu_category_list"><a href="">샌드위치</a></li>
               </ul>
             </div>
           </div>
@@ -47,7 +47,7 @@
               <li class="recommended_item_wrap">
                 <a class="#">
                   <span class="img">
-                    <img src="../img/salt-bread.jpg" alt="" />
+                    <img src="../img/salt-bread.jpg" alt="">
                   </span>
                   <span class="info">
                     <span></span>
@@ -61,7 +61,7 @@
               <li class="recommended_item_wrap">
                 <a class="#">
                   <span class="img">
-                    <img src="../img/salt-bread.jpg" alt="" />
+                    <img src="../img/salt-bread.jpg" alt="">
                   </span>
                   <span class="info">
                     <span></span>
@@ -73,7 +73,7 @@
               <li class="recommended_item_wrap">
                 <a class="#">
                   <span class="img">
-                    <img src="../img/salt-bread.jpg" alt="" />
+                    <img src="../img/salt-bread.jpg" alt="">
                   </span>
                   <span class="info">
                     <span></span>
@@ -85,7 +85,7 @@
               <li class="recommended_item_wrap">
                 <a class="#">
                   <span class="img">
-                    <img src="../img/salt-bread.jpg" alt="" />
+                    <img src="../img/salt-bread.jpg" alt="">
                   </span>
                   <span class="info">
                     <span></span>
@@ -97,7 +97,7 @@
               <li class="recommended_item_wrap">
                 <a class="#">
                   <span class="img">
-                    <img src="../img/salt-bread.jpg" alt="" />
+                    <img src="../img/salt-bread.jpg" alt="">
                   </span>
                   <span class="info">
                     <span></span>
